// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Components Navbar Android should renders correctly 1`] = `
<IconToolbarAndroid
  actions={Array []}
  iconSize={24}
  navIconName="arrow-back"
  onActionSelected={[Function]}
  onIconClicked={[MockFunction]}
  style={
    Object {
      "backgroundColor": "#325776",
      "height": 56,
    }
  }
  title="My title"
  titleColor="white"
/>
`;

exports[`Components Navbar Android should renders correctly 2`] = `
<IconToolbarAndroid
  actions={Array []}
  iconSize={24}
  logo={1}
  onActionSelected={[Function]}
  style={
    Object {
      "backgroundColor": "#325776",
      "height": 56,
    }
  }
  title="  My title"
  titleColor="white"
/>
`;
